Fixing error-prone warnings.